most recent file

--- a/Models/most_recent_Model_MS3.ipynb
+++ b/Models/most_recent_Model_MS3.ipynb
@@ -1390,29 +1390,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Trained models for: ['Olin', 'Uris', 'Mann', 'Math']\n"
+          "ename": "NameError",
+          "evalue": "name 'libraries' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/var/folders/v3/9t2y60v90gqfp164z1099dnh0000gn/T/ipykernel_16279/1536257813.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mlib_models\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mlib\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlibraries\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0;31m# feature we use in the model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Hour'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'DayOfWeek_num'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mf'IsClosed_{lib}'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'IsPrelimDay'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'IsPrelimMinus1'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'libraries' is not defined"
           ]
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "5ed012bdb859427c90600ce5e0aa25e1",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "VBox(children=(HBox(children=(Dropdown(description='Library:', options=('Olin', 'Uris', 'Mann', 'Math'), value…"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
         }
       ],
       "source": [
